hphp/hack/test/typecheck/new_inference/eager_solve/shapes_toarray.php.like_types.exp
File "shapes_toarray.php", line 28, characters 23-117:
Invalid return type (Typing[4110])
File "shapes_toarray.php", line 25, characters 18-36:
Expected darray<string, num>
File "collections/Map.hhi", line 709, characters 31-44:
But got dynamic because it is an unenforceable type
File "shapes_toarray.php", line 28, characters 23-117:
Invalid return type (Typing[4110])
File "shapes_toarray.php", line 25, characters 18-36:
Expected darray<string, num>
File "shapes_toarray.php", line 28, characters 23-117:
But got dynamic, the result of calling a dynamic type as a function
